--- a/RPG.css
+++ b/RPG.css
@@ -23,9 +23,11 @@ background-size: cover;
     text-align:center;
     padding: 35px;
 }
-#myButtonDiv{
-	visibility: hidden;
-}
+/*
+#success_image {
+    float: right;
+
+}*/
 
 #drop_menu{
     color: white;
@@ -39,8 +41,10 @@ background-size: cover;
 }
 
 #success{
+    float: right;
     visibility: hidden;
     background-color: black;
+    margin-right: 100px;
 }
 
 #input{
@@ -49,4 +53,8 @@ background-size: cover;
     margin-left: 10px;
     color: black;
     background-color: rgba(231, 230, 230, 0.73);
+}
+
+#myButtonDiv{
+    visibility: hidden;
 }
