--- a/RPG.css
+++ b/RPG.css
@@ -1,6 +1,16 @@
 body{
     background-image: url("https://cdn.gamedevmarket.net/wp-content/uploads/20191203193538/8b741662764b0e71bf113859b6fe2ee84ee6d14f.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+#Home_Page_Title{
+    font-size: 35px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    background-color: rgba(0,0,0, 0.5);
+    text-align:center;
+    padding: 35px;
 }
 
 #button1{
@@ -66,4 +76,8 @@ footer {
     padding: 3px;
     background-color: lightslategrey;
     color: white;
+    display: block;
+    position:absolute;
+    bottom:0;
+    width:99%;
 }
