--- a/RPG.css
+++ b/RPG.css
@@ -1,27 +1,18 @@
 body{
     background-image: url("https://cdn.gamedevmarket.net/wp-content/uploads/20191203193538/8b741662764b0e71bf113859b6fe2ee84ee6d14f.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
+    height: 100%;
+    margin-bottom: 0;
 }
 
-
 #Home_Page_Title{
+    color:white;
     font-size: 35px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     background-color: rgba(0,0,0, 0.5);
     text-align:center;
     padding: 35px;
 }
-
-#button1{
-    margin-top: 0px;
-}
-
-/*
-#success_image {
-    float: right;
-
-}*/
 
 #drop_menu{
     color: white;
@@ -34,7 +25,9 @@ body{
     text-align:center;
 }
 
-#button1{}
+#button1{
+    margin-top: 0px;
+}
 
 #success{
     float: right;
@@ -43,10 +36,6 @@ body{
     margin-right: 100px;
 }
 
-#myButton{}
-
-#inputForm{}
-
 #input{
     /*height: 30px;
     width: 200px;*/
@@ -54,8 +43,6 @@ body{
     color: black;
     background-color: rgba(231, 230, 230, 0.73);
 }
-
-#inputUpload{}
 
 #myButtonDiv{
     visibility: hidden;
@@ -69,11 +56,34 @@ body{
     opacity: 0.9;
 }
 
-#fill_image{}
-
 footer {
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0px;
+    height: 75px;
+    width: 100%;
+    margin: 0px;
     padding: 3px;
-    background-color: lightslategrey;
+    background-color: black;
+    opacity: 0.5;
     color: white;
 }
+
+
+/*
+#success_image {
+    float: right;
+
+
+#myButton{}
+
+#inputForm{}
+
+#button1{}
+
+#fill_image{}
+
+#inputUpload{}
+
+}*/
