--- a/RPG.css
+++ b/RPG.css
@@ -26,13 +26,15 @@ body{
     text-align:center;
 }
 
+#button1{
+    margin-top: 0px;
+}
+
 #success{
     float: right;
     visibility: hidden;
     background-color: black;
     margin-right: 100px;
-    position: relative;
-    z-index: 1;
 }
 
 #input{
@@ -41,6 +43,10 @@ body{
     margin-left: 10px;
     color: black;
     background-color: rgba(231, 230, 230, 0.73);
+}
+
+#myButtonDiv{
+    visibility: hidden;
 }
 
 #test{
@@ -167,7 +173,6 @@ body{
     position: absolute;
     border: 5px solid black;
     color: white;
-
 }
 
 
@@ -176,17 +181,6 @@ body{
     border: 5px solid black;
     color: white;
 }
-
-
-}
-
-
-/* These set the borders for the attribute table and their differnt cells */
-#attribute{
-    border: 5px solid black;
-    color: white;
-}
-
 
 #stats{
     border: 5px solid black;
@@ -206,22 +200,12 @@ body{
 #hp_stat{
     border: 5px solid black;
     color: white;
-
 }
 
 #attack{
     border: 5px solid black;
     color: white;
 }
-
-
-}
-
-#attack{
-    border: 5px solid black;
-    color: white;
-}
-
 
 #attack_stat{
     border: 5px solid black;
@@ -273,14 +257,6 @@ footer {
     opacity: 0.5;
     color: white;
 }
-/*
-Save
- */
-a {
-    visibility: hidden;
-}
-
-saveButton { visibility: visible; }
 
 
 /*
