--- a/RPG.css
+++ b/RPG.css
@@ -26,10 +26,6 @@ body{
     text-align:center;
 }
 
-#button1{
-    margin-top: 0px;
-}
-
 #success{
     float: right;
     visibility: hidden;
@@ -45,10 +41,6 @@ body{
     margin-left: 10px;
     color: black;
     background-color: rgba(231, 230, 230, 0.73);
-}
-
-#myButtonDiv{
-    visibility: hidden;
 }
 
 #test{
@@ -164,18 +156,13 @@ body{
 }
 
 
-/* This is the separate attribute table that shows basic attributes/statistics */
-
-#attribute_table{
-    width: 10%;
-    height: 330px;
-    margin-left: 10px;
-    margin-top: -50px;
-    left: 0;
-    position: absolute;
+/* These set the borders for the attribute table and their differnt cells */
+#attribute{
     border: 5px solid black;
     color: white;
 }
+
+
 
 
 /* These set the borders for the attribute table and their differnt cells */
@@ -183,6 +170,7 @@ body{
     border: 5px solid black;
     color: white;
 }
+
 
 #stats{
     border: 5px solid black;
@@ -202,12 +190,15 @@ body{
 #hp_stat{
     border: 5px solid black;
     color: white;
+
 }
+
 
 #attack{
     border: 5px solid black;
     color: white;
 }
+
 
 #attack_stat{
     border: 5px solid black;
@@ -259,6 +250,14 @@ footer {
     opacity: 0.5;
     color: white;
 }
+/*
+Save
+ */
+a {
+    visibility: hidden;
+}
+
+saveButton { visibility: visible; }
 
 
 /*
