--- a/RPG.css
+++ b/RPG.css
@@ -1,30 +1,18 @@
 body{
-background-image: url("https://cdn.gamedevmarket.net/wp-content/uploads/20191203193538/8b741662764b0e71bf113859b6fe2ee84ee6d14f.jpg");
-background-size: cover;
-}
-
-#test{
-    height: 50px;
-    width: 450px;
-    color: white;
-    background-color: rgba(0,0,0, 0.5);
-    opacity: 0.9;
-}
-
-#button1{
-    margin-top: 0px;
+    background-image: url("https://cdn.gamedevmarket.net/wp-content/uploads/20191203193538/8b741662764b0e71bf113859b6fe2ee84ee6d14f.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    margin-bottom: 0;
 }
 
 #Home_Page_Title{
-    color: purple;
-	font-size: 35px;
+    color:white;
+    font-size: 35px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     background-color: rgba(0,0,0, 0.5);
     text-align:center;
     padding: 35px;
-}
-#myButtonDiv{
-	visibility: hidden;
 }
 
 #drop_menu{
@@ -38,9 +26,15 @@ background-size: cover;
     text-align:center;
 }
 
+#button1{
+    margin-top: 0px;
+}
+
 #success{
+    float: right;
     visibility: hidden;
     background-color: black;
+    margin-right: 100px;
 }
 
 #input{
@@ -50,3 +44,65 @@ background-size: cover;
     color: black;
     background-color: rgba(231, 230, 230, 0.73);
 }
+
+#myButtonDiv{
+    visibility: hidden;
+}
+
+#test{
+    height: 50px;
+    width: 450px;
+    color: white;
+    background-color: rgba(0,0,0, 0.5);
+    opacity: 0.9;
+}
+
+#attribute_table{
+    width: 10%;
+    height: 300px;
+    margin-left: 450px;
+    left: 0;
+}
+
+table, th, td{
+    border: 5px solid black;
+    color: white;
+}
+
+#fill_image{
+    position: fixed;
+    margin-top: -300px;
+}
+
+
+footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0px;
+    height: 75px;
+    width: 100%;
+    margin: 0px;
+    padding: 3px;
+    background-color: black;
+    opacity: 0.5;
+    color: white;
+}
+
+
+/*
+#success_image {
+    float: right;
+
+
+#myButton{}
+
+#inputForm{}
+
+#button1{}
+
+#fill_image{}
+
+#inputUpload{}
+
+}*/
