--- a/RPG.css
+++ b/RPG.css
@@ -84,11 +84,24 @@ body{
     text-align: center;
 }
 
+#character_class{
+    width: 300px;
+    height: 15%;
+    border: 7px solid black;
+    margin-left: 585px;
+    margin-top: 10px;
+    color: white;
+    font-size: 50px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: white;
+    text-align: center;
+}
+
 /* These are the tabs that are used to create the weapons, skills, and items */
 .tab{
     overflow: hidden;
     border: 1px solid #ccc;
-    margin-top: 7px;
+    margin-top: -75px;
     margin-left: 150px;
     width: 368px;
     border: 7px solid black;
@@ -198,16 +211,34 @@ body{
     white-space: nowrap;
     width:200px;
     overflow: hidden;
+    text-align: center;
 } 
 .single_line br {
-display:none;
-
+    display:none;
 }
+
 .single_line * {
-display:inline;
-white-space:nowrap;
+    display:inline;
+    white-space:nowrap;
 }
 
+
+.button_class{
+    background-color:rgba(0,0,0, 0.5);
+    color: whitesmoke;
+    width: 100%;
+    height: 100%;
+}
+
+
+.button_class:hover{
+    background-color: whitesmoke;
+    color: black;
+}
+
+.button_class.active{
+    background-color: whitesmoke;
+}
 
 
 
@@ -229,6 +260,7 @@ white-space:nowrap;
 #hp{
     border: 5px solid black;
     color: white;
+    text-align: center;
 }
 
 #hp_stat{
@@ -243,41 +275,61 @@ white-space:nowrap;
 #attack{
     border: 5px solid black;
     color: white;
+    text-align: center;
 }
 
 #attack_stat{
     border: 5px solid black;
     color: white;
+    max-width: 40px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 #defense{
     border: 5px solid black;
     color: white;
+    text-align: center;
 }
 
 #defense_stat{
     border: 5px solid black;
     color: white;
+    max-width: 40px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 #strength{
     border: 5px solid black;
     color: white;
+    text-align: center;
 }
 
 #strength_stat{
     border: 5px solid black;
     color: white;
+    max-width: 40px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 #magic{
     border: 5px solid black;
     color: white;
+    text-align: center;
 }
 
 #magic_stat{
     border: 5px solid black;
     color: white;
+    max-width: 40px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 
