--- a/RPG.css
+++ b/RPG.css
@@ -18,31 +18,77 @@ body{
 #drop_menu{
     color: white;
     padding: 10px;
+    margin-left: -45px;
+    margin-top: -45px;
     background-color:rgba(0,0,0, 0.5);
+    position: absolute;
 }
 
 #drop_menu_2{
-    width: 5%;
+    width: 32%;
+    margin-left: -35px;
     text-align:center;
 }
 
+
+/* Input Button for Character Select/Image */
 #button1{
     margin-top: 0px;
+    height: 20px;
+    color: whitesmoke;
+    background-color:rgba(0,0,0, 0.5);
 }
 
+#button1:hover {
+    background-color:whitesmoke;
+    color: black;
+}
+
+#button1.active {
+    background-color: #ccc;
+}
+
+
 #success{
+    height: 75px;
+    width: 50px;
     float: right;
     visibility: hidden;
     background-color: black;
-    margin-right: 100px;
+    margin-right: -1300px;
 }
 
 #input{
-    /*height: 30px;
-    width: 200px;*/
+    height: -30px;
+    width: 175px;
     margin-left: 10px;
+    color: whitesmoke;
+    background-color:rgba(0,0,0, 0.5);
+}
+
+
+/* File Upload Button */
+
+#inputForm{
+    width: 70px;
+    margin-left: 135px;
+    margin-top: -85px;
+    position: absolute;
+}
+
+#inputUpload{
+    margin-left: 10px;
+    color: whitesmoke;
+    background-color: rgba(0,0,0, 0.5);
+}
+
+#inputUpload:hover {
+    background-color:whitesmoke;
     color: black;
-    background-color: rgba(231, 230, 230, 0.73);
+}
+
+#inoutUpload.active {
+background-color: #ccc;
 }
 
 #myButtonDiv{
@@ -59,6 +105,40 @@ body{
 
 
 
+#dark_mode_button{
+    height: 20px;
+    width: 75px;
+    margin-left: 245px;
+    margin-top: 70px;
+    color: whitesmoke;
+    background-color: rgba(0,0,0, 0.5);
+}
+
+#dark_mode_button:hover {
+    background-color:whitesmoke;
+    color: black;
+}
+
+#dark_mode_button.active {
+    background-color: #ccc;
+}
+
+
+
+/* Sidebar Container for the Sidebar Tasks */
+
+#sidebar_container{
+    width: 275px;
+    height: 80px;
+    border: 15px solid black;
+    padding: 50px;
+    margin: 20px;
+    margin-left: 10px;
+    margin-top: 0px;
+    position: absolute;
+}
+
+
 /* Character Container For the Character Customization Area */
 #character_container{
     width: 55%;
@@ -67,7 +147,7 @@ body{
     padding: 50px;
     margin: 20px;
     margin-left: 450px;
-    margin-top: -100px;
+    margin-top: 10px;
     position: relative;
     background-color: rgba(0,0,0, 0.5);
 }
@@ -252,10 +332,6 @@ body{
     color: white;
 }
 
-#fill_image{
-    position: fixed;
-    margin-top: -410px;
-}
 
 #hp{
     border: 5px solid black;
@@ -332,6 +408,10 @@ body{
     white-space: nowrap;
 }
 
+#fill_image{
+    position: fixed;
+    margin-top: -300px;
+}
 
 
 footer {
