--- a/RPG.css
+++ b/RPG.css
@@ -1,32 +1,38 @@
-body{
+body
+{
     background-image: url("https://cdn.gamedevmarket.net/wp-content/uploads/20191203193538/8b741662764b0e71bf113859b6fe2ee84ee6d14f.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100%;
     margin-bottom: 0;
 }
 
-#Home_Page_Title{
-    color:white;
+#Home_Page_Title
+{
+    color: white;
     font-size: 35px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: rgba(0,0,0, 0.5);
-    text-align:center;
+    text-align: center;
     padding: 35px;
 }
 
-#drop_menu{
+#drop_menu
+{
     color: white;
     padding: 10px;
-    background-color:rgba(0,0,0, 0.5);
+    background-color: rgba(0,0,0, 0.5);
 }
 
-#drop_menu_2{
+#drop_menu_2
+{
     width: 5%;
-    text-align:center;
+    text-align: center;
 }
 
-#success{
+#success
+{
     float: right;
     visibility: hidden;
     background-color: black;
@@ -35,7 +41,8 @@ body{
     z-index: 1;
 }
 
-#input{
+#input
+{
     /*height: 30px;
     width: 200px;*/
     margin-left: 10px;
@@ -43,7 +50,8 @@ body{
     background-color: rgba(231, 230, 230, 0.73);
 }
 
-#test{
+#test
+{
     height: 50px;
     width: 450px;
     color: white;
@@ -54,7 +62,8 @@ body{
 
 
 /* Character Container For the Character Customization Area */
-#character_container{
+#character_container
+{
     width: 55%;
     height: 400px;
     border: 15px solid black;
@@ -66,19 +75,21 @@ body{
     background-color: rgba(0,0,0, 0.5);
 }
 
-#character_name{
+#character_name
+{
     width: 105%;
     height: 65px;
     border: 7px solid black;
     margin-top: -35px;
     margin-left: -30px;
     font-size: 55px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
     text-align: center;
 }
 
-#character_class{
+#character_class
+{
     width: 300px;
     height: 15%;
     border: 7px solid black;
@@ -86,13 +97,14 @@ body{
     margin-top: 10px;
     color: white;
     font-size: 50px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
     text-align: center;
 }
 
 /* These are the tabs that are used to create the weapons, skills, and items */
-.tab{
+.tab
+{
     overflow: hidden;
     border: 1px solid #ccc;
     margin-top: -75px;
@@ -102,7 +114,8 @@ body{
     font-size: 50px;
 }
 
-.tab button {
+.tab button
+{
     background-color: inherit;
     float: left;
     border: none;
@@ -112,29 +125,33 @@ body{
     transition: 0.3s;
     font-size: 30px;
     color: white;
-    background-color:rgba(0,0,0, 0.5);
-  }
+    background-color: rgba(0,0,0, 0.5);
+}
 
-  .tab button:hover {
-    background-color:whitesmoke;
+.tab button:hover
+{
+    background-color: whitesmoke;
     color: black;
-  }
+}
 
-  .tab button.active {
+.tab button.active
+{
     background-color: #ccc;
-  }
+}
 
-
-  .tab_content {
+.tab_content
+{
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
-  }
+}
 
 /* This is where the different content is filled for the various tabs */
-#weapons{
-    width: 500px;;
+#weapons
+{
+    width: 500px;
+;
     height: 280px;
     margin-left: 200px;
     margin-top: 5px;
@@ -144,9 +161,10 @@ body{
     color: white;
 }
 
-
-#skills{
-    width: 500px;;
+#skills
+{
+    width: 500px;
+;
     height: 280px;
     margin-left: 200px;
     margin-top: 5px;
@@ -156,9 +174,10 @@ body{
     color: white;
 }
 
-
-#items{
-    width: 500px;;
+#items
+{
+    width: 500px;
+;
     height: 280px;
     margin-left: 200px;
     margin-top: 5px;
@@ -171,7 +190,8 @@ body{
 
 /* This is the separate attribute table that shows basic attributes/statistics */
 
-#attribute_table{
+#attribute_table
+{
     width: 10%;
     height: 330px;
     margin-left: 10px;
@@ -182,7 +202,8 @@ body{
     color: white;
 }
 
-#attribute_table_button{
+#attribute_table_button
+{
     margin-top: 285px;
     margin-left: -25px;
     width: 8%;
@@ -190,79 +211,89 @@ body{
     color: black;
 }
 
-#attribute_table_button:hover{
+#attribute_table_button:hover
+{
     background-color: black;
     color: whitesmoke;
 }
 
-#attribute_table_button.active{
+#attribute_table_button.active
+{
     background-color: black;
 }
 
-#inputformXX {
+#inputformXX
+{
     visibility: hidden;
 }
 
 /* These set the borders for the attribute table and their differnt cells */
 
-.single_line {
+.single_line
+{
     white-space: nowrap;
-    width:200px;
+    width: 200px;
     overflow: hidden;
     text-align: center;
 }
-.single_line br {
-    display:none;
+
+.single_line br
+{
+    display: none;
 }
 
-.single_line * {
-    display:inline;
-    white-space:nowrap;
+.single_line *
+{
+    display: inline;
+    white-space: nowrap;
 }
 
-
-.button_class{
-    background-color:rgba(0,0,0, 0.5);
+.button_class
+{
+    background-color: rgba(0,0,0, 0.5);
     color: whitesmoke;
     width: 100%;
     height: 100%;
 }
 
-
-.button_class:hover{
+.button_class:hover
+{
     background-color: whitesmoke;
     color: black;
 }
 
-.button_class.active{
+.button_class.active
+{
     background-color: whitesmoke;
 }
 
-
-
-#attribute{
+#attribute
+{
     border: 5px solid black;
     color: white;
 }
 
-
-#stats{
+#stats
+{
     border: 5px solid black;
     color: white;
 }
 
-#fill_image{
+#fill_image
+{
     position: fixed;
     margin-top: -410px;
 }
 
-#hp{
+#hp
+{
     border: 5px solid black;
     color: white;
     text-align: center;
 }
 
-#hp_stat{
+#hp_stat
+{
     border: 5px solid black;
     color: white;
     max-width: 40px;
@@ -271,15 +302,15 @@ body{
     white-space: nowrap;
 }
 
-
-#attack{
+#attack
+{
     border: 5px solid black;
     color: white;
     text-align: center;
 }
 
-
-#attack_stat{
+#attack_stat
+{
     border: 5px solid black;
     color: white;
     max-width: 40px;
@@ -288,13 +319,15 @@ body{
     white-space: nowrap;
 }
 
-#defense{
+#defense
+{
     border: 5px solid black;
     color: white;
     text-align: center;
 }
 
-#defense_stat{
+#defense_stat
+{
     border: 5px solid black;
     color: white;
     max-width: 40px;
@@ -303,13 +336,15 @@ body{
     white-space: nowrap;
 }
 
-#strength{
+#strength
+{
     border: 5px solid black;
     color: white;
     text-align: center;
 }
 
-#strength_stat{
+#strength_stat
+{
     border: 5px solid black;
     color: white;
     max-width: 40px;
@@ -318,13 +353,15 @@ body{
     white-space: nowrap;
 }
 
-#magic{
+#magic
+{
     border: 5px solid black;
     color: white;
     text-align: center;
 }
 
-#magic_stat{
+#magic_stat
+{
     border: 5px solid black;
     color: white;
     max-width: 40px;
@@ -333,9 +370,8 @@ body{
     white-space: nowrap;
 }
 
-
-
-footer {
+footer
+{
     text-align: center;
     position: absolute;
     bottom: 0;
@@ -351,11 +387,15 @@ footer {
 /*
 Save
  */
-a {
+a
+{
     visibility: hidden;
 }
 
-saveButton { visibility: visible; }
+saveButton
+{
+    visibility: visible;
+}
 
 
 /*
