--- a/RPG.css
+++ b/RPG.css
@@ -4,6 +4,7 @@ body
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: block;
     height: 100%;
     margin-bottom: 0;
 }
@@ -114,7 +115,7 @@ background-color: #ccc;
     width: 80px;
     font-size: 10px;
     margin-left: 242px;
-    margin-top: 45px;
+    margin-top: 65px;
     color: whitesmoke;
     background-color: rgba(0,0,0, 0.5);
 }
@@ -469,22 +470,26 @@ footer {
     color: white;
 }
 
-save
-{
-    margin-left: 600px;
-}
-/*
-Save
- */
-a
-{
-    visibility: hidden;
-}
+   
+    #save{
+        margin-left: 255px;
+        margin-top: -50px;
+    }
+    /*
+    Save
+    */
+    a
+    {
+        visibility: hidden;
+        color: black;
+        font-weight: bolder;
+    }
 
-saveButton
-{
-    visibility: visible;
-}
+    .saveButton
+    {
+        visibility: visible;
+        margin-left: 600px;
+    }
 
 
 /*
