--- a/RPG.css
+++ b/RPG.css
@@ -95,7 +95,7 @@ body
     color: black;
 }
 
-#inoutUpload.active {
+#inputUpload.active {
 background-color: #ccc;
 }
 
@@ -271,7 +271,7 @@ background-color: #ccc;
 .weapon_display{
     width: 150px;
     height: 120px;
-    margin-left: 50px;
+    margin-left: 225px;
     margin-top: 80px;
     left: 0;
     position: absolute;
